--- a/donate.html
+++ b/donate.html
@@ -124,8 +124,8 @@
                             <div class="d-inline-block bg-primary text-white rounded-bottom fs-5 pb-1 px-3 mb-4">
                                 <small>WireTransffer</small>
                             </div>
-                            <h5 class="mb-3">Finance Trust Bank</h5>
-                            <p><b>A/C Name:</b> Noah Birimuye Sekate <br> <b>A/C No:</b> 217200004796</p>
+                            <h5 class="mb-3">DFCU Bank</h5>
+                            <p><b>A/C Name:</b> Anual Ssemaganda <br> <b>A/C No:</b> 01420016307292</p>
 
                         </div>
                         <div class="position-relative mt-auto">
