--- a/donate.html
+++ b/donate.html
@@ -129,7 +129,7 @@
 
                         </div>
                         <div class="position-relative mt-auto">
-                            <img class="img-fluid" src="img/finace.jpg" alt="">
+                            <img class="img-fluid" src="img/dfcu.jpg" alt="">
                             <div class="causes-overlay">
 
                             </div>
@@ -158,14 +158,14 @@
                     <div class="causes-item d-flex flex-column bg-white border-top border-5 border-primary rounded-top overflow-hidden h-100">
                         <div class="text-center p-4 pt-0">
                             <div class="d-inline-block bg-primary text-white rounded-bottom fs-5 pb-1 px-3 mb-4">
-                                <small>WesternUnion</small>
+                                <small>PayPal</small>
                             </div>
                             <h5 class="mb-3"></h5>
-                            <p><b>Name:</b></p>
+                            <p><b><a href="https://www.paypal.com/paypalme/ssemagandaAnual"/>Click Me</b></p>
 
                         </div>
                         <div class="position-relative mt-auto">
-                            <img class="img-fluid" src="img/westernw.jpg" alt="">
+                            <img class="img-fluid" src="img/paypal.jpg" alt="">
                             <div class="causes-overlay">
 
                             </div>
