--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                             <p class="text-dark mb-2">Rockies Ministries is a fully registered charity organisation operating in Kiganwa, Mityana District in Uganda founded in March 2019.</p>
                             <span class="text-primary">Ssemaganda Anual, Founder</span>
                         </div>
-                        <p class="mb-5">The Orphanage comprises of 23 children taken care of with other few neighboring elders.</p>
+                        <p class="mb-5">The Orphanage comprises of more than 28 children taken care of with other few neighboring elders.</p>
                         <a class="btn btn-primary py-2 px-3 me-3" href="about.html">
                             Learn More
                             <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
