--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@
                             <p class="text-dark mb-2">Rockies Ministries is a fully registered charity organisation operating in Kiganwa, Mityana District in Uganda founded in March 2019.</p>
                             <span class="text-primary">Ssemaganda Anual, Founder</span>
                         </div>
-                        <p class="mb-5">The Orphanage comprises of 23 children taken care of with other few neighboring elders.</p>
+                        <p class="mb-5">The Orphanage comprises of more than 28 children taken care of with other few neighboring elders.</p>
 
                     </div>
                 </div>
