--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <title>Rockies Ministries</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta content="Rockies Ministries is a fully registered charity organisation operating in Kiganwa, Mityana District in Uganda founded in March 2019 taking care of over 28 children who where abandoned and remained orphans" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
