--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="w-100" src="img/about-1.jpg" alt="Image">
+                    <img class="w-100" src="img/11.jpg" alt="Image">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-center">
